Change UserStats usages to User
